# Dropset Rust SDK — off-chain client for MM bots, routers, and indexers.
#
# Spine A (interface.md § SDK): the Codama-generated client under
# `src/generated` (instruction builders, account codecs, PDA helpers).
# Spine B: the solana-free `price` + `layout` + `matching` modules — the
# `Price` codec and just-in-time book reconstruction, which the IDL does
# not describe (the `Vault` slab is opaque to it). Those modules carry no
# Solana dependency so the same math can target wasm32 later.

[dependencies]
borsh = {version = "1", features = ["derive"]}
bytemuck = {version = "1", features = ["derive", "min_const_generics"]}
dropset-price-core = {path = "../price-core"}
num-derive = "0.4"
num-traits = "0.2"
serde = {version = "1", optional = true, features = ["derive"]}
serde_with = {version = "3", optional = true}
# Optional — pulled in by the `fetch` / `serde` features above.
solana-account = {version = "3", optional = true}
solana-account-info = "3"
# Pinned to the 3.1 minor (not bare "3"): `fetch` exposes this crate's
# `RpcClient`, and the locally installed `solana-test-validator` it talks
# to must agree on the same minor for wire/RPC compatibility. The
# `check-toolchain` make target gates the validator to 3.1.x to match.
solana-client = {version = "~3.1", optional = true}
solana-cpi = "3"
solana-instruction = "3"
solana-program-error = "3"
solana-pubkey = {version = "3", features = ["borsh", "curve25519"]}
thiserror = "1"

[dev-dependencies]
# Reads the shared sdk/conformance/quoting_vectors.json in
# tests/quoting_conformance.rs (the quoting-translation pin).
serde_json = "1"

[features]
# Codama emits `#[cfg(feature = "anchor")]` / `"anchor-idl-build"` gates
# for optional anchor-compat impls. Declared here so the flags are known
# (silences `unexpected_cfgs`); left empty — we don't ship the anchor path.
anchor = []
anchor-idl-build = []
default = []
# Async account-fetch helpers in the generated client.
fetch = ["dep:solana-account", "dep:solana-client"]
# `serde` derives on the generated types.
serde = ["dep:serde", "dep:serde_with"]

[package]
description = "Off-chain client + book-math for the Dropset eCLOB program."
edition = "2021"
name = "dropset-sdk"
publish = false
version = "0.1.0"
