# Deterministic session-transcript token accounting. The bulk of the
# `session-metrics` skill — read a session's JSONL transcript (and its
# sub-agent files), attribute the token cost across tools, and rank the
# largest sinks — is pure mechanism, so it lives here as a committed binary
# that inherits the workspace's cargo fmt + clippy hooks. It reads the
# transcript in its OWN process, so the huge file never enters the model's
# context. No network and no async runtime: it only parses local JSON.

[dependencies]
anyhow = "1"
serde = {version = "1", features = ["derive"]}
serde_json = "1"

[package]
description = "Deterministic session-transcript token accounting and sink ranking."
name = "dropset-session-metrics"
publish = false
edition.workspace = true
version.workspace = true
